# agent-mcp-gemini-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python.yaml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt
backend/fastapi_build/: __init__.py  agent.py  main.py
backend/fastapi_build/agents/: __init__.py  youtube_processing_agents.py
backend/fastapi_build/core/: config.py
backend/fastapi_build/mcp_servers/: youtube_transcript_mcp_server.py
backend/tests/: test_youtube_processing_agents.py
