# code-agent-gemini/pyproject.toml

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "I", "UP", "A"]
ignore = [
    "D203",
    "D213",
    "D100",
    "D104",
    "D107",
]
extend-exclude = [
    ".venv",
    "frontend/node_modules"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | frontend/node_modules
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[build-system]
requires       = ["setuptools>=61.0", "wheel"]
build-backend  = "setuptools.build_meta"

[project]
name             = "fastapi_build"
version          = "0.1.0"
description      = "FastAPI backend for Code Agent Gemini - YouTube Summarizer and Fact-Checker"
readme           = "README.md"
requires-python  = ">=3.11"
license          = { text = "MIT License" }

# (Other project-level scripts or tools can be added below as needed.)
