# code-agent-gemini/pyproject.toml

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [
    ".venv",
    "frontend/node_modules"
]

[tool.ruff.lint]
ignore = ["E402", "I001", "D203", "D213", "D100", "D104", "D107"]
select = ["E", "F", "I", "UP", "A"]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | frontend/node_modules
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[build-system]
requires       = ["setuptools>=61.0", "wheel"]
build-backend  = "setuptools.build_meta"

[project]
name             = "fastapi_build"
version          = "0.1.0"
description      = "FastAPI backend for Code Agent Gemini - YouTube Summarizer and Fact-Checker"
readme           = "README.md"
requires-python  = ">=3.11"
license          = { text = "MIT License" }
